<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBar">

    <TextView
        android:id="@+id/home_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/home_page"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/ourWebsite_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/our_website"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_nav"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/share_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/share_app"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourWebsite_nav"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/moreApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/more_app"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_nav"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/rateUs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/rate_us"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreApp"
        tools:ignore="RtlCompat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/aboutUs_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/about_us"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateUs"
        tools:ignore="RtlCompat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/exitApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/exit"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:drawableEndCompat="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs_nav"
        tools:ignore="RtlCompat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/admin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_20sdp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/admin"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitApp"
        tools:ignore="RtlCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>