<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/helloText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="Hello, Devendra Singh"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlCompat" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewPagerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/popular_blogs"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_heading"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/helloText"
                    tools:ignore="RtlCompat" />


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/topPostViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewPagerText" />

                <LinearLayout
                    android:id="@+id/sliderDots"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/topPostViewPager"
                    app:layout_constraintStart_toStartOf="@id/topPostViewPager" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/newInMobileTechText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/opensans_semi_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="What's New in Mobile Application"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_heading"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/topPostViewPager"
                    tools:ignore="RtlCompat" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/newInMobileTechCV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newInMobileTechText">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:background="@drawable/bg_gradient_blue_pink">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="@dimen/_90sdp"
                            android:layout_height="@dimen/_90sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:src="@drawable/ic_android"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semi_bold"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="What's New"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="@id/image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image"
                            app:layout_constraintTop_toTopOf="@id/image"
                            tools:ignore="RtlCompat" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/androidBlog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/android"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_heading"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newInMobileTechCV"
                    tools:ignore="RtlCompat" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tutorialRView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/androidBlog"
                    app:reverseLayout="false"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:listitem="@layout/layout_tutorial_grid" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/widgetsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/widgets"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_heading"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tutorialRView"
                    tools:ignore="RtlCompat" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/androidWidgetsCV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/widgetsText">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:background="@drawable/bg_gradient_blue_pink">

                        <ImageView
                            android:id="@+id/androidIV"
                            android:layout_width="@dimen/_90sdp"
                            android:layout_height="@dimen/_90sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:src="@drawable/ic_android"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_bold"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="@string/android_n_widgets"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="@id/androidIV"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/androidIV"
                            app:layout_constraintTop_toTopOf="@id/androidIV"
                            tools:ignore="RtlCompat" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/kotlinTutorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/androidWidgetsCV">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:background="@drawable/layout_purple_curverd_bcg">

                        <ImageView
                            android:id="@+id/flutterIV"
                            android:layout_width="@dimen/_90sdp"
                            android:layout_height="@dimen/_90sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:src="@drawable/ic_flutter"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_bold"
                            android:gravity="center"
                            android:text="@string/flutter_n_widgets"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="@id/flutterIV"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/flutterIV"
                            app:layout_constraintTop_toTopOf="@id/flutterIV"
                            tools:ignore="RtlCompat" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/latestBlogText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/latest_blog"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/kotlinTutorial"
                    tools:ignore="RtlCompat" />


                <!--
                                <WebView
                                    android:id="@+id/latestBlogWebView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="@dimen/_20sdp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/latestBlogText">

                                </WebView>
                -->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAppBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

